--- a/jxlint/src/main/resources/velocity/report.vm
+++ b/jxlint/src/main/resources/velocity/report.vm
@@ -56,15 +56,6 @@ $(document).ready(function() {
         <h4> $validatedDirectory </h4>
     </div>
 
-    <div>
-        <h4 class="center"> Verified rules </h4>
-        <ul class="list-group">
-            #foreach($ruleThatWasChecked in $rulesThatWereChecked)
-                <li class="list-group-item"> $ruleThatWasChecked.getName() </li>
-            #end
-        </ul>
-    </div>
-
     <ul class="nav nav-tabs" role="tablist" id="category-nav">
       <li class="active"><a href="#all" data-target="$navDataTargets" role="tab" data-toggle="tab">All</a></li>
       <li><a href="#summary" role="tab" data-toggle="tab">Summary</a></li>
@@ -77,7 +68,17 @@ $(document).ready(function() {
 
     <div class="tab-content">
         <div class="tab-pane active" id="summary">
+            <div id="verified-rules" data-toggle="collapse" data-parent="#summary" data-target="#verified-rule-list" style="cursor: pointer;">
+                <h4 class="center"> Verified rules </h4>
+                <ul class="list-group in" id="verified-rule-list">
+                    #foreach($ruleThatWasChecked in $rulesThatWereChecked)
+                        <li class="list-group-item"> $ruleThatWasChecked.getName() </li>
+                    #end
+                </ul>
+            </div>
+
             <div class="table" >
+                <h4 class="center"> Violations </h4>
                 <table class="table table-condensed table-striped table-bordered tablesorter">
                     <thead>
                     <tr>
