Add group display name, fix extension namespace

--- a/idea-plugin/src/main/resources/META-INF/plugin.vm
+++ b/idea-plugin/src/main/resources/META-INF/plugin.vm
@@ -4,7 +4,7 @@
     <version> $pluginVersion </version>
     <vendor> $pluginVendor </vendor>
 
-    <extensions defaultExtensionNs="$pluginNamespace">
+    <extensions defaultExtensionNs="com.intellij">
         <inspectionToolProvider implementation="$provider" />
     </extensions>
 
