--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-  <head>
+<head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Jxlint : Framework for doing static analysis in Java">
@@ -6,5 +6,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Jxlint</title>
-  </head>
 
+    {% if site.baseurl %}
+        {% include google-analytics.html %}
+    {% endif %}
+</head>
