Add link to Javadoc in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,10 @@
         <h1 id="project_title">Jxlint</h1>
         <h2 id="project_tagline">Framework for doing static analysis in Java</h2>
 
+        <section id="links">
+            <a href="javadoc"> Javadoc </a>
+        </section>
+
         <section id="downloads">
             <a class="zip_download_link" href="https://github.com/selesse/jxlint/zipball/master">Download this project as a .zip file</a>
             <a class="tar_download_link" href="https://github.com/selesse/jxlint/tarball/master">Download this project as a tar.gz file</a>
