--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -315,6 +315,18 @@ Full-Width Styles
   text-shadow: #111 0px 0px 10px;
 }
 
+#links {
+    font-size: 24px;
+    position: absolute;
+    right: 0;
+    padding-right: 20px;
+    bottom: 90px;
+}
+
+#links a:visited, a:hover, a:link {
+    color: white;
+}
+
 #downloads {
   position: absolute;
   width: 210px;
