--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,8 @@
 
         <section id="links">
             <a href="javadoc"> Javadoc </a>
+            |
+            <a href="sample-report/index.html"> Sample Report </a>
         </section>
 
         <section id="downloads">
